<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_inventory"
        android:textSize="22dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_identification"
        android:textSize="18dp"
        android:textColor="#000"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/et_inventory_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/area"
            android:textSize="18dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textSize="18dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_inventory_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.00"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.69"
            android:text="@string/parcels_area"
            android:textSize="18dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_parcels_area"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_weight="0.45" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.67"
            android:text="@string/inline_space"
            android:textSize="18dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_inline_space"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_weight="0.76" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.54"
            android:text="@string/between_line_space"
            android:textSize="18dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_between_line_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.89"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/plantation_date"
            android:textSize="18dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_plantation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.45"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/species"
            android:textSize="18dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.38"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_save_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8d8"
        android:text="@string/save"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"/>

</LinearLayout>