<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_borders_main">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/arvores" />
                <TextView
                    android:id="@+id/tv_inv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/area"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_inv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text="  "
                    android:textSize="20dp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="15dp"
                    android:textSize="18dp"
                    android:text="@string/date"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_inv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="5dp"
                    android:textSize="18dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/parcels"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_inv_parcels_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text="  "
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/parcels_area"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_inv_parcels_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="5dp"
                    android:textSize="18dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/plantation_date"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_inv_plantation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="5dp"
                    android:textSize="18dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/species"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_inv_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text=" "
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/area_wood_volume"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_volume_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text=" "
                    android:textSize="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/bt_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:drawableRight="@android:drawable/ic_menu_view"
                    android:textSize="24sp"
                    android:background="@drawable/button_selector"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/bt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:drawableRight="@android:drawable/ic_dialog_email"
                    android:textSize="24sp"
                    android:background="@drawable/button_selector"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/bt_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:drawableRight="@android:drawable/ic_menu_edit"
                    android:textSize="24sp"
                    android:background="@drawable/button_selector"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/bt_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:drawableRight="@android:drawable/ic_menu_delete"
                    android:textSize="24sp"
                    android:background="@drawable/button_selector"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>