<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_borders_main">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_tree_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/tree_height"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_tree_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text="  "
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/cap"
                    android:textStyle="bold"
                    android:layout_weight="0.15" />
                <TextView
                    android:id="@+id/tv_tree_cap"
                    android:layout_width="0dp"
                    android:layout_weight="1.38"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text=" "
                    android:textSize="20dp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.65"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/dap"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_tree_dap"
                    android:layout_width="0dp"
                    android:layout_weight="1.19"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text=" "
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/tree_wood_volume"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_tree_wood_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text=" "
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:text="@string/notes"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_tree_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text=" "
                    android:textSize="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/bt_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:drawableRight="@android:drawable/ic_menu_edit"
                    android:textSize="24sp"
                    android:background="@drawable/button_selector"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/bt_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:drawableRight="@android:drawable/ic_menu_delete"
                    android:textSize="24sp"
                    android:background="@drawable/button_selector"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

